MOBI-1068 ios7 mobileshowcase issues - dataview column alignment  - add max-width and min-width to column styles  - adjust css
git-svn-id: http://anonsvn.icesoft.org/repo/icemobile/trunk/icemobile@41549 8668f098-c06c-11db-ba21-f49e70c34f74

--- a/resources/themes/base/1_dataview.css
+++ b/resources/themes/base/1_dataview.css
@@ -87,10 +87,20 @@
 
 .mobi-dv-body table {
     width:100%;
+    max-width: 100%;
     border-spacing: 0;
     border-collapse: collapse;
 }
-
+.mobi-dv table th{
+    white-space: nowrap;
+    border-left: 1px solid rgba(255, 255, 255, 0.1);
+    overflow: hidden;
+}
+.mobi-dv table td {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 .mobi-dv-foot {
     width:100%;
     border-spacing: 0;
